tests/syntax_errors/test_mismatch.si
algorithm error(input uint1 b)
{
  (m) <- test = (1,2,3);
}
